<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/sort_order"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        android:id="@+id/menu_sort_order">
        <menu>
            <item
                android:orderInCategory="1"
                android:title="@string/popular"
                android:id="@+id/menu_popular"/>
            <item
                android:orderInCategory="2"
                android:title="@string/rated"
                android:id="@+id/menu_rated"/>
            <item
                android:orderInCategory="3"
                android:title="@string/favorite"
                android:id="@+id/menu_favorite"/>
        </menu>
    </item>
    <item android:title="@string/refresh"
        android:orderInCategory="1"
        app:showAsAction="always"
        android:visible="false"
        android:id="@+id/menu_refresh"/>
</menu>