<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/detail_poster_iv"
            android:layout_width="150dp"
            android:layout_height="224dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/poster_image_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:color/darker_gray" />

        <TextView
            android:id="@+id/detail_title_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/detail_poster_iv"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/movie_title" />

        <TextView
            android:id="@+id/detail_release_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat"
            app:layout_constraintStart_toStartOf="@+id/release_date"
            app:layout_constraintTop_toBottomOf="@+id/release_date"
            tools:text="@string/movie_release" />

        <TextView
            android:id="@+id/detail_rating_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat"
            app:layout_constraintStart_toStartOf="@+id/rating"
            app:layout_constraintTop_toBottomOf="@+id/rating"
            tools:text="@string/movie_rating" />

        <TextView
            android:id="@+id/detail_overview_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_poster_iv"
            tools:text="@string/movie_detail" />

        <TextView
            android:id="@+id/release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/movie_title"
            android:textAppearance="@style/TextAppearance.AppCompat"
            app:layout_constraintStart_toEndOf="@+id/detail_poster_iv"
            app:layout_constraintTop_toBottomOf="@+id/detail_title_tv" />

        <TextView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/movie_rating"
            android:textAppearance="@style/TextAppearance.AppCompat"
            app:layout_constraintStart_toEndOf="@+id/detail_poster_iv"
            app:layout_constraintTop_toBottomOf="@+id/detail_release_tv" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>